--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "devDependencies": {
-    "markdownlint-cli": "^0.33.0",
     "vitepress": "1.0.0-alpha.64"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs",
-    "lint": "markdownlint -f ."
+    "docs:preview": "vitepress preview docs"
   }
 }
