--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "vitepress": "1.0.0-alpha.64"
+    "@femm/prettier": "^1.0.1",
+    "@mdit-vue/shared": "^0.12.0",
+    "sass": "^1.58.3",
+    "vitepress": "1.0.0-alpha.48",
+    "vue": "^3.2.47"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
