--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@femm/prettier": "^1.0.1",
     "@mdit-vue/shared": "^0.12.0",
+    "@types/node": "^18.15.11",
     "sass": "^1.58.3",
     "vitepress": "1.0.0-alpha.48",
     "vue": "^3.2.47"
@@ -9,6 +10,8 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  }
+    "docs:preview": "vitepress preview docs",
+    "run": "node ./scripts/index.js"
+  },
+  "type": "module"
 }
