--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "docs:preview": "vitepress preview docs",
     "run": "node ./scripts/index.js"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.3.4"
+  }
 }
