--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@femm/prettier": "^1.0.1",
     "@mdit-vue/shared": "^0.12.0",
     "@types/node": "^18.15.11",
+    "@vite-pwa/vitepress": "^0.0.5",
     "sass": "^1.58.3",
     "vitepress": "1.0.0-alpha.48",
     "vue": "^3.2.47"
@@ -15,6 +16,7 @@
   },
   "type": "module",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "lodash-es": "^4.17.21"
   }
 }
